--- a/AcademicoMVC-Core/pom.xml
+++ b/AcademicoMVC-Core/pom.xml
@@ -15,6 +15,8 @@
     <packaging>jar</packaging>
     
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>        
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -28,7 +30,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+                        <version>5.1.46</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -47,5 +49,6 @@
                     <version>2.0.1.Final</version>
                     <type>jar</type>
                 </dependency>
+
     </dependencies>
 </project>
